@@ -101,6 +101,13 @@ public class ParseArgs {
 
   public static String getArg(String argument, String[] args)
   {
+    if (argument.indexOf('=') != -1)
+      {
+	throw new IllegalArgumentException("Error, = character passed into getArg(" + argument + ")");
+      }
+
+    String compoundArgument = argument + "=";
+
     for (int i = 0; i < args.length; i++)
       {
 	if (args[i].startsWith(argument))
